P12: open LogAgent #13 (11->17); scorecard now 9 PRs + full bail list