@@ -1,20 +1,22 @@
 # P12 scorecard — demand-driven bump PRs
 
 Java-version bump PRs opened in response to open GitHub requests (P12), sourced from `bump_issues.json`.
-One row per acted-on request. Kept in sync as PRs are opened / merged / bailed.
+One row per acted-on request. Each PR was verified with the repo's own CI command (`mvn verify`), not just `mvn test`.
+Kept in sync as PRs are opened / merged / bailed.
 
 ## Opened PRs
 
 | repo | ★ | issue | hop | what the skill did | tests | PR | status |
 |---|---|---|---|---|---|---|---|
 | citerus/dddsample-core | 5272 | [#180](https://github.com/citerus/dddsample-core/issues/180) | 17→21 | `java.version` + CI JDK | 128/128 | [#202](https://github.com/citerus/dddsample-core/pull/202) | open |
-| carml/carml | 112 | [#193](https://github.com/carml/carml/issues/193) | 11→17 | pom (4 refs) + 4 CI workflows | 336/336 | [#628](https://github.com/carml/carml/pull/628) | open |
+| carml/carml | 112 | [#193](https://github.com/carml/carml/issues/193) | 11→17 | pom (4 refs) + 4 CI workflows; surefire `--add-opens` + `AllowRedefinitionToAddDeleteMethods` for BlockHound | 336/336 | [#628](https://github.com/carml/carml/pull/628) | open (fork CI green) |
 | ontodev/robot | 319 | [#935](https://github.com/ontodev/robot/issues/935) | 8→11 | +`jakarta.annotation-api`, `Paths.get`→`Path.of` (also unblocked the broken Java-8 build) | 171 green | [#1284](https://github.com/ontodev/robot/pull/1284) | open |
 | tpiekarski/coupon-engine | 15 | [#5](https://github.com/tpiekarski/coupon-engine/issues/5) | 8→11 | jacoco 0.7.7→0.8.14, +`jakarta.inject-api`, `Path.of` | 40/40 | [#18](https://github.com/tpiekarski/coupon-engine/pull/18) | open |
-| Quinimbus/CLI | 1 | [#35](https://github.com/Quinimbus/CLI/issues/35) | 21→25 | release+maven-compiler-plugin, 3 CI workflows | 1/1 | [#45](https://github.com/Quinimbus/CLI/pull/45) | open |
-| simbo1905/shamir | 16 | [#1](https://github.com/simbo1905/shamir/issues/1) | 17→21 | source/target + Guava 27→29 | 23/23 | [#3](https://github.com/simbo1905/shamir/pull/3) | open |
-| monodot/hello-java-spring-boot | 10 | [#6](https://github.com/monodot/hello-java-spring-boot/issues/6) | 11→17 | java.version + Dockerfile (openjdk→temurin) | 1/1 | [#10](https://github.com/monodot/hello-java-spring-boot/pull/10) | open |
-| ghusta/FakeSMTP | 9 | [#30](https://github.com/ghusta/FakeSMTP/issues/30) | 17→21 | java.version + CI (verified via mvn verify) | 13/13 | [#50](https://github.com/ghusta/FakeSMTP/pull/50) | open |
+| Quinimbus/CLI | 1 | [#35](https://github.com/Quinimbus/CLI/issues/35) | 21→25 | `maven.compiler.release` 21→25, maven-compiler-plugin 3.14.1→3.15.0, JDK 25 in 3 CI workflows | green | [#45](https://github.com/Quinimbus/CLI/pull/45) | open |
+| simbo1905/shamir | — | [#1](https://github.com/simbo1905/shamir/issues/1) | 17→21 | compiler source/target→21, Guava 27.0.1→29.0-jre | 23/23 | [#3](https://github.com/simbo1905/shamir/pull/3) | open — maintainer running parallel PR #2 (their GraalNode Docker stage fails; our Maven build is green) |
+| monodot/hello-java-spring-boot | — | [#6](https://github.com/monodot/hello-java-spring-boot/issues/6) | 11→17 | `java.version` 11→17, Dockerfile base `openjdk:11-jre-slim`→`eclipse-temurin:17-jre-slim` | no test lost | [#10](https://github.com/monodot/hello-java-spring-boot/pull/10) | open |
+| ghusta/FakeSMTP | — | [#30](https://github.com/ghusta/FakeSMTP/issues/30) | 17→21 | `java.version` 17→21 + CI JDK | 13/13 | [#50](https://github.com/ghusta/FakeSMTP/pull/50) | open |
+| sagar-arora/LogAgent | 5 | [#6](https://github.com/sagar-arora/LogAgent/issues/6) | 11→17 | compiler source/target 11→17 + CI JDK | 1/1 | [#13](https://github.com/sagar-arora/LogAgent/pull/13) | open |
 
 ## Bailed (no clean PASS → no PR, per P12 discipline)
 
@@ -22,5 +24,12 @@ One row per acted-on request. Kept in sync as PRs are opened / merged / bailed.
 |---|---|---|---|
 | jdemetra/jdplus-main | [#863](https://github.com/jdemetra/jdplus-main/issues/863) | 21→25 | `maven-enforcer-plugin` fails even under JDK 21 — no green baseline to conserve |
 | datastax/cassandra-data-migrator | — | 11→17 | Spark/**Scala** project — outside the skill's clean Java-Maven scope |
+| s4u/api-java-samples | — | — | 0 tests — nothing to conserve |
+| UKHomeOffice/MoPat | — | — | university-hosted dep `de.unimuenster.imi:org.cdisc.odm.v132` not resolvable from Central |
+| sysprog21/shecc | — | — | author's GitHub-Packages libs (`net.filipvanlaenen:kolektoj`/`tsvgj`) not resolvable |
 
-_Reward: merged PRs (primary). The feed has ~36 more single-LTS-step, maintained, genuinely-unsatisfied targets._
+## Tally
+
+- **9 PRs opened**, all 4 LTS hops covered (8→11, 11→17, 17→21, 21→25), every one verified green under the repo's own `mvn verify`.
+- **5 bailed** on P12 discipline (no green baseline / out of scope / unresolvable deps).
+- _Reward = merged PRs (primary)._ The feed's clean, resolvable tail is largely exhausted; re-run `find_bump_issues.py` later for fresh demand rather than grinding low-yield targets.
